<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trangchu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="402dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotrungnguyen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="388dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="#59B9BBBB"
        android:text="Thông Tin Khách Hàng"
        android:textColor="#FF0000"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtTen"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTen"
        android:textColor="#090000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/txtTen" />

    <TextView
        android:id="@+id/txtSĐT"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtSĐT"
        android:textColor="#090000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTen" />

    <TextView
        android:id="@+id/txtNgàySinh"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtNgàySinh"
        android:textColor="#090000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSĐT" />

    <EditText
        android:id="@+id/editTên"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTên"
        android:textColor="#090000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editSĐT"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editSĐT"
        android:textColor="#090000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTên" />

    <EditText
        android:id="@+id/editNgàySinh"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editNgàySinh"
        android:textColor="#090000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSĐT" />

    <TextView
        android:id="@+id/txtchonghe"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:background="#59B9BBBB"
        android:text="Lựa chọn hàng ghế"
        android:textColor="#FF0000"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/txtChọnPhim2"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:background="#59B9BBBB"
        android:text="@string/txtChọnPhim"
        android:textColor="#FF0000"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="302dp"
        android:layout_height="28dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="12dp"
        android:entries="@array/chonphim_array"
        android:spinnerMode="dropdown"
        android:textColor="#090000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChọnPhim2" />

    <TextView
        android:id="@+id/txtChọnRạp"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:background="#59B9BBBB"
        android:text="@string/txtChọnRạp"
        android:textColor="#FF0000"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNgàySinh" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="299dp"
        android:layout_height="26dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="16dp"
        android:entries="@array/chonrap_array"
        android:spinnerMode="dropdown"
        android:textColor="#090000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChọnRạp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:text="Chọn ghế"
        android:textColor="#090000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtchonghe" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginBottom="17dp"
        android:text="Mua vé"
        android:textColor="#090000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginBottom="17dp"
        android:text="hủy Mua"
        android:textColor="#090000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>